# F1-Winner-Prediction

./: .coveragerc  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  feature_engineering.py  main.py  main_predictor.py  model_trainer.py  prediction.py  pyproject.toml  pytest.ini  quali_data.py  qualifying_times.csv  race_predictor.py  requirements.txt  run_prediction.py  setup.py  web_interface_README.md
.github/workflows/: ci.yml
debug/: qualifying_data.csv
docs/: Makefile  weather_integration.md
docs/docs/source/: conf.py  index.rst
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  data.rst  index.rst  usage.rst
examples/: live_weather_prediction.py
results/: race_results_2025_round1.csv
scripts/: main_predictor.py  predict_season.py  prediction.py  qual_data.py  run_prediction.py
src/data/: data_processor.py
src/f1predictor/: __init__.py  data_processor.py
src/f1predictor/models/: model_trainer.py  performance_adjustments.py  race_predictor.py
src/f1predictor/utils/: config.py  logging.py  weather_service.py
src/features/: feature_engineering.py
tests/: test_data_processor.py  test_feature_engineering.py  test_model_trainer.py  test_race_predictor.py  test_utils.py
